Add authentication, admin dashboard, and Flyway setup
Introduces user registration and login with Spring Security, including role-based access and password hashing. Adds admin statistics dashboard with top sellers, monthly revenue, and low stock reports using raw SQL and DTOs. Configures PostgreSQL via Docker Compose, Flyway migrations for schema and seed data, and updates application properties for database connectivity. Includes Thymeleaf templates for home, login, register, and statistics pages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=e-commerce
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/clothing_store
+spring.datasource.username=admin
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+logging.level.org.springframework.jdbc.core=DEBUG
